# blade

./: .gitignore  CMakeLists.txt  README.md  autograd_demo.ipynb  compile.sh  dev_notes.md
examples/: benchmark.py  download_mnist.py  mnist_cnn.py  train_mnist_mlp.py
include/blade/: node.h  ops.h  tensor.h
include/blade/data/: dataset.h  mnist.h
include/blade/nn/: activations.h  layers.h  loss.h  module.h  pooling.h
include/blade/optim/: adam.h  optimizer.h  sgd.h
python/: bindings.cpp
slides/: main.tex
src/: internal.h  node.cpp  ops.cpp  tensor.cpp
src/data/: dataset.cpp  mnist.cpp
src/nn/: activations.cpp  layers.cpp  loss.cpp  module.cpp  pooling.cpp
src/ops/: activations.cpp  elementwise.cpp  linalg.cpp  nn.cpp  reductions.cpp  shape.cpp
src/optim/: adam.cpp  optimizer.cpp  sgd.cpp
tests/: test_blade.py
